--- a/static/style.css
+++ b/static/style.css
@@ -112,6 +112,10 @@ cursor: pointer;
     position: relative;
     padding: 0 20px;
 }
+.new-chart-section {
+    position: relative;
+    padding: 0 20px;
+}
 
 .left-part  {
     margin: 60px 0; 
@@ -136,7 +140,7 @@ cursor: pointer;
     border-radius: 50%;
 }
 
-.left-part p {
+.left-part p { 
     color: black; /*#555*/
     font-weight: 400;
     font-size: 14px;
@@ -146,15 +150,31 @@ cursor: pointer;
     margin-left: 10px;
 }
 
-.chart-section .right-part {
-    margin: -50px 0;
+.left-part ul li{ 
+    color: black; /*#555*/
+    font-weight: 400;
+    font-size: 14px;
+    background: rgba(0,0,0,.1);
+    border-radius: 10px;
+    padding: 10px;
+    margin-left: 10px;
+    margin-bottom: 10px;
+}
+
+
+ .right-part {
+    margin: -60px 0;
     text-align: right;
     max-width: 260px;
     float: right;
     font-size: 14px;
 }
-
-.chart-section .right-part p {
+ul {
+    list-style-type: none; /* Removes the bullets */
+    padding: 0;            /* Removes the default padding */
+    margin:  0;             
+}
+ .right-part ul li { 
     color: #fff;
     font-size: 13px;
     background: #0f0f20;
@@ -164,11 +184,12 @@ cursor: pointer;
     margin: 0 0px 10px 0px;
 }
 
+
 .chart-section .right-part span {
     color: black; /*#555*/
     font-size: 11px;
     font-weight: 500;
-    display: none;
+    /* display: none; */
 }
 
 .bottom-section {
